# ragrag

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  TODO.md  noxfile.py  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
ragrag/: cli.py  config.py  file_state.py  mcp_server.py  models.py  path_discovery.py
ragrag/daemon/: __init__.py  client.py  http_status.py  rpc.py  server.py  static.py
ragrag/embedding/: colqwen_embedder.py  vlm_loader.py
ragrag/extractors/: image_extractor.py  pdf_extractor.py  text_extractor.py  text_topic_segmenter.py  vlm_topic_chunker.py  vlm_topic_client.py  vlm_topic_subprocess.py  vlm_topic_worker.py
ragrag/index/: ingest_manager.py  page_cache.py  qdrant_store.py
ragrag/retrieval/: location_builder.py  reranker.py  result_formatter.py  search_engine.py  vlm_rerank_worker.py
scripts/: benchmark_stm32h743.py  diff_bench.py  fetch_validation_data.py  search_cli.py  validate_search.py
src/: cli.py  config.py  file_state.py  mcp_server.py  models.py  path_discovery.py
src/embedding/: colqwen_embedder.py
src/extractors/: image_extractor.py  ocr.py  pdf_extractor.py  text_extractor.py
src/index/: ingest_manager.py  qdrant_store.py
src/retrieval/: result_formatter.py  search_engine.py
tests/: conftest.py  test_cli.py  test_cli_auto_start.py  test_cli_inprocess_fallback.py  test_cpu_fallback_detection.py  test_daemon_client_call.py  test_daemon_dispatcher.py  test_daemon_lifecycle.py  test_daemon_rpc.py  test_daemon_stale_pid.py  test_diff_bench.py  test_e2e.py  test_http_dashboard.py  test_ingest.py  test_location_builder.py  test_mcp_server.py  test_page_cache.py  test_reranker.py  test_reranker_gpu_required.py  test_reranker_worker_dispatch.py  test_reranker_worker_moondream_dispatch.py  test_result_formatter.py  test_search.py  test_text_extractor.py  test_text_topic_segmenter.py  test_todo_cases.py  test_validation.py  test_vlm_topic_chunker.py  test_vlm_topic_client.py
validation/benchmarks/: baseline.json  phase-A.json  phase-B.json  phase-D.json
validation/expected/: queries.yaml
validation/fixtures/text/: embedded_notes.md  project_config.yaml  stm32_gpio_driver.c  stm32_gpio_driver.h
validation/fixtures/unsupported/: firmware.elf
